force-app/main/default/objects/Loan_Application__c/fields/Home_Location__c.field-meta.xml
<CustomField>
    <fullName>Home_Location__c</fullName>
    <label>Home Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>