force-app/main/default/objects/Loan_Application__c/fields/Home_Type__c.field-meta.xml
<CustomField>
    <fullName>Home_Type__c</fullName>
    <label>Home Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>