force-app/main/default/objects/Loan_Application__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>