force-app/main/default/objects/Loan_Application__c/fields/Personal_Need__c.field-meta.xml
<CustomField>
    <fullName>Personal_Need__c</fullName>
    <label>Personal Need</label>
    <length>80</length>
    <type>Text</type>
</CustomField>